# jalebi

./: .gitignore  CMakeLists.txt  README.md
include/xsimd/config/: xsimd_align.hpp  xsimd_config.hpp  xsimd_include.hpp  xsimd_instruction_set.hpp
include/xsimd/math/: xsimd_basic_math.hpp  xsimd_error.hpp  xsimd_exp_reduction.hpp  xsimd_exponential.hpp  xsimd_fp_manipulation.hpp  xsimd_fp_sign.hpp  xsimd_gamma.hpp  xsimd_horner.hpp  xsimd_hyperbolic.hpp  xsimd_invtrigo.hpp  xsimd_logarithm.hpp  xsimd_math_complex.hpp  xsimd_numerical_constant.hpp  xsimd_power.hpp  xsimd_rem_pio2.hpp  xsimd_rounding.hpp  xsimd_scalar.hpp  xsimd_trigo_reduction.hpp  xsimd_trigonometric.hpp
include/xsimd/memory/: xsimd_aligned_allocator.hpp  xsimd_aligned_stack_buffer.hpp  xsimd_alignment.hpp  xsimd_load_store.hpp
include/xsimd/stl/: algorithms.hpp  iterator.hpp
include/xsimd/types/: xsimd_avx512_bool.hpp  xsimd_avx512_complex.hpp  xsimd_avx512_conversion.hpp  xsimd_avx512_double.hpp  xsimd_avx512_float.hpp  xsimd_avx512_int16.hpp  xsimd_avx512_int32.hpp  xsimd_avx512_int64.hpp  xsimd_avx512_int8.hpp  xsimd_avx512_int_base.hpp  xsimd_avx_complex.hpp  xsimd_avx_conversion.hpp  xsimd_avx_double.hpp  xsimd_avx_float.hpp  xsimd_avx_int16.hpp  xsimd_avx_int32.hpp  xsimd_avx_int64.hpp  xsimd_avx_int8.hpp  xsimd_avx_int_base.hpp  xsimd_base.hpp  xsimd_base_bool.hpp  xsimd_complex_base.hpp  xsimd_fallback.hpp  xsimd_int_conversion.hpp  xsimd_neon_bool.hpp  xsimd_neon_complex.hpp  xsimd_neon_conversion.hpp  xsimd_neon_double.hpp  xsimd_neon_float.hpp  xsimd_neon_int16.hpp  (+20 more)
src/: main.cpp
